2004-04-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-sections.txt:

2004-04-17  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_dispose):
	  simplify
	* gst/gstpad.c: (gst_pad_call_chain_function):
	  don't create loads of events due to bad macro usage

2004-04-16  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c: (gst_caps_is_fixed_foreach):
	* gst/gstpad.c: (_gst_pad_default_fixate_foreach):
	* gst/gstvalue.c: (gst_value_serialize_buffer),
	(gst_value_deserialize_buffer), (gst_type_is_fixed),
	(_gst_value_initialize): Create a new function gst_type_is_fixed()
	to indicate types that are fixed wrt caps or not.  Switching to
	this function fixes (bug #140298).
	* gst/gstvalue.h:

2004-04-16  David Schleef  <ds@schleef.org>

	* common/m4/gst-arch.m4:  Implmenent a whitelist and blacklist
	for GST_UNALIGNED_ACESS, since we essentially know which archs
	are ok.

2004-04-17  Benjamin Otte  <otte@gnome.org>

	* docs/gst/Makefile.am:
	  ignore gst/parse directory when building docs (fixes #140205)

2004-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/refcounting/mem.c: (vmsize):
          do error checking

2004-04-16  Johan Dahlin  <johan@gnome.org>

	* docs/gst/gstreamer-sections.txt: Add gst_pad_call_chain_function
	and gst_pad_call_get_function.

2004-04-15  David Schleef  <ds@schleef.org>

	* common/m4/gst-arch.m4: Add GST_UNALIGNED_ACCESS() macro that
	checks if we can access unaligned memory.
	* configure.ac: Use it.

2004-04-16  Benjamin Otte  <otte@gnome.org>

	* gst/elements/gstfilesrc.c: (gst_filesrc_init), (gst_filesrc_get),
	(gst_filesrc_change_state), (gst_filesrc_srcpad_event):
	* gst/elements/gstfilesrc.h:
	  s/seek_happened/need_discont/ and require discont before sending any
	  data

2004-04-15  David Schleef  <ds@schleef.org>

	* gst/gstvalue.c: (gst_value_serialize_buffer),
	(gst_value_deserialize_buffer), (_gst_value_initialize):